# alloy

./: .editorconfig  .envrc  .gitignore  A_Physics-Guided_Graph_Convolution_Neural_Network_for_Optimal_Power_Flow.md  PROJECT_STATUS.md  alloy.code-workspace  pyproject.toml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  pull_request_template.md
.github/instructions/: Development Rules.md.instructions.md
.github/workflows/: ci.yml
alloy/: __init__.py  losses.py  train_case39.py  training.py
alloy/benchmarks/: __init__.py  case39_runner.py  supervised_runner.py
alloy/benchmarks/presets/: __init__.py  case39.py
alloy/core/: __init__.py  admittance.py  aggregation.py
alloy/experiments/: __init__.py  experiment_config.py  experiment_logger.py  experiment_scheduler.py  gpu_monitor.py  reevaluate_benchmark.py  reevaluate_run.py  run_benchmark.py  run_topology_gui.py  tune_batch_size.py
alloy/models/: __init__.py  gcnn.py  gcnn_layer.py  registry.py
alloy/models/gcnn_gao_01/: __init__.py  adapters.py  layer.py  model.py
alloy/pipelines/: __init__.py  feature_construction.py  gcnn_input.py
alloy/web/: __init__.py  topology_api.py
alloy/web/static/: topology_gui.html
examples/: core_demo.py  pipeline_gcnn_demo.py
tests/: conftest.py  test_core_admittance.py  test_core_aggregation.py  test_data_normalization.py  test_data_sample_generation.py  test_losses.py  test_models_gcnn.py  test_models_gcnn_layer.py  test_pipelines.py  test_training.py
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx  index.css  main.tsx
(+47 files in other folders)
